# bonbon

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
libs/large-language-model/: README.md  main.py  pyproject.toml
libs/large-language-model/bb/lib/large_language_model/: __init__.py  llm.py
libs/speech-to-text/: README.md  main.py  pyproject.toml
libs/speech-to-text/bb/lib/speech_to_text/: __init__.py  stt.py
libs/story-graph/: README.md  pyproject.toml  story_graph.json
libs/story-graph/bb/lib/story_graph/: __init__.py  answer_checker.py  asker.py  graph.py  resumer.py  utils.py  writer.py
libs/story-graph/scripts/: main.py
libs/text-to-speech/: README.md  main.py  pyproject.toml
libs/text-to-speech/bb/lib/text_to_speech/: __init__.py  tts.py
services/story-creator-app/: README.md  app.py  pyproject.toml
services/story-graph-app/: README.md  app.py  pyproject.toml
services/story-player-app/: README.md  app_story_player.py  pyproject.toml
services/story-player-app/bb/service/story_player_app/: README.md  player.py  utils.py
