[project]
name = "bb-lib-large-language-model"
version = "0.1.0"
description = "LLM package"
requires-python = ">=3.8, <3.12"
readme = "README.md"
dependencies = [
    "mistralai",
    "tenacity",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bb.lib.large_language_model"] 