[project]
name = "story-graph-app"
version = "0.1.0"
description = "Story Graph App"
readme = "README.md"
requires-python = ">=3.9, <3.12"
dependencies = [
    "bb-lib-story-graph",
    "gradio",
]

[tool.uv.sources]
bb-lib-story-graph = {path = "../../libs/story-graph"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bb.service.story_graph_app"] 